--- a/index.html
+++ b/index.html
@@ -23,10 +23,18 @@
             margin: 20px auto;
             box-shadow: 0 2px 8px rgba(42,82,152,0.08);
         }
+        .club-logo {
+            display: block;
+            margin: 30px auto 20px auto;
+            width: 150px;
+            border-radius: 50%;
+            box-shadow: 0 4px 16px rgba(42,82,152,0.15);
+        }
     </style>
 </head>
 <body>
     <h1>Welcome to the CS Club!</h1>    
+    <img src="https://i.scdn.co/image/ab67616d0000b273fb105ebe018b3fe6691e6adf" alt="CS Club Logo" class="club-logo">
     <p>We are excited to have you here. Stay tuned for upcoming events and activities.</p>
 </body>
 </html>
